# fhr_deal_finder

./: .gitignore  README.md  __main__.py  amex.py  development.md  fhr_cli.py  fhrlib.py  foo.py  prompt.py  pyproject.toml  requirements.txt
fhr_deal_finder/: __main__.py  flights.py  hotels.py  prompt.py  web_requests.py
